--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@ button:hover {
   border-radius: 3px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) transform;
+  transition: 1s all ease;
   /* margin: 15px !important; */
 }
 
