--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,15 @@ h1 {
 
 form {
   margin-bottom: 50px;
+  display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 input[type='text'] {
-  min-width: 400px;
+  width: 100%;
+  min-width: 200px;
+  max-width: 400px;
   border-radius: 50px;
   padding: 15px 20px;
   border: 1px solid #fff;
@@ -53,6 +58,14 @@ input[type='text'] {
   margin-right: 12px;
   font-size: 18px;
   transition: 0.3s ease border-color;
+}
+@media (max-width:450px){
+  form {
+    flex-direction: column;
+  }
+  input[type='text'] {
+    margin-bottom: 10px;
+  }  
 }
 
 input[type='text']:active,
@@ -90,24 +103,24 @@ button:hover {
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   transition: 1s all ease;
-  /* margin: 15px !important; */
+  filter: drop-shadow(0px -1px 3px rgba(0, 0, 0, 0.39));
+  transform: rotateX(-1deg)  
 }
 
 .image:hover {
-  transform: translateY(-2px);
+  transform: rotateX(3deg)
+  scale(1.01);
+  filter: drop-shadow(0px 7px 5px rgba(0, 0, 0, 0.39)) !important;
 }
 
-.image img {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+
+
+.infinite-scroll > div > div {  
+  overflow: hidden;
+  perspective: 2000px;
+  
 }
 
-.image:nth-child(3n) {
-  grid-column-end: span 2;
-}
-.container {
-  display: flex;
-  justify-content: center;
+.react-images__view-image--isModal {
+  max-height: 110vh !important;
 }
