--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ body {
   min-height: 100vh;
   background: #dcdcdc;
   padding: 100px 50px;
+  position: relative;
+  z-index: 0;
 }
 
 .error {
@@ -41,10 +43,12 @@ h1 {
 }
 
 form {
-  margin-bottom: 50px;
   display: flex;
-    width: 100%;
-    justify-content: center;
+  width: 100%;
+  max-width: 600px;
+  justify-content: center;
+  margin: auto;
+  margin-bottom: 50px;
 }
 
 input[type='text'] {
@@ -59,13 +63,13 @@ input[type='text'] {
   font-size: 18px;
   transition: 0.3s ease border-color;
 }
-@media (max-width:450px){
+@media (max-width: 450px) {
   form {
     flex-direction: column;
   }
   input[type='text'] {
     margin-bottom: 10px;
-  }  
+  }
 }
 
 input[type='text']:active,
@@ -100,27 +104,29 @@ button:hover {
   background: #fff;
   padding: 5px;
   border-radius: 3px;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  transition: 1s all ease;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: .5s all ease;
   filter: drop-shadow(0px -1px 3px rgba(0, 0, 0, 0.39));
-  transform: rotateX(-1deg)  
+  
 }
 
 .image:hover {
-  transform: rotateX(3deg)
-  scale(1.01);
+  transform: scale(1.01) translateY(5px);
   filter: drop-shadow(0px 7px 5px rgba(0, 0, 0, 0.39)) !important;
 }
 
-
-
-.infinite-scroll > div > div {  
+.infinite-scroll > div > div {
   overflow: hidden;
-  perspective: 2000px;
   
 }
 
 .react-images__view-image--isModal {
-  max-height: 110vh !important;
+  max-height: 95vh !important;
+}
+.particles-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  z-index: -1;
 }
