--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;600;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -17,6 +18,11 @@ body {
   padding: 100px 50px;
   position: relative;
   z-index: 0;
+}
+@media (max-width: 700px){
+  .app {    
+    padding: 10%;    
+  }
 }
 
 .error {
@@ -37,15 +43,17 @@ body {
 }
 
 h1 {
-  margin-top: 0;
-  margin-bottom: 20px;
-  color: #bbb;
+  font-family: 'Josefin Slab', serif;
+  max-width: 500px;  
+  margin: auto;  
+  margin-bottom: 50px;
+  color: rgb(54, 54, 54);
 }
 
 form {
   display: flex;
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
   justify-content: center;
   margin: auto;
   margin-bottom: 50px;
@@ -105,13 +113,13 @@ button:hover {
   padding: 5px;
   border-radius: 3px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  transition: .5s all ease;
+  transition: .3s all ease;
   filter: drop-shadow(0px -1px 3px rgba(0, 0, 0, 0.39));
   
 }
 
 .image:hover {
-  transform: scale(1.01) translateY(5px);
+  transform: translateY(-5px);
   filter: drop-shadow(0px 7px 5px rgba(0, 0, 0, 0.39)) !important;
 }
 
