--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -43,11 +44,11 @@ body {
 }
 
 h1 {
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Ubuntu', sans-serif;
   max-width: 500px;  
   margin: auto;  
   margin-bottom: 50px;
-  color: rgb(54, 54, 54);
+  color: rgb(70, 70, 70);
 }
 
 form {
