--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ body {
 
 .app {
   text-align: center;
-  min-height: 100vh;
-  background: #dcdcdc;
+  min-height: 100vh;  
+  background: linear-gradient(0.25turn, #c4c4c4, #eeeeee, #c4c4c4);
   padding: 100px 50px;
   position: relative;
   z-index: 0;
@@ -90,8 +90,8 @@ button {
   padding: 15px 20px;
   border-radius: 50px;
   border: none;
-  background: #222;
-  color: #bbb;
+  background: rgb(70, 70, 70);;
+  color: rgb(223, 223, 223);
   font-size: 18px;
   cursor: pointer;
   transition: 0.3s ease all;
